--- a/waver_project/core/static/styles/main.css
+++ b/waver_project/core/static/styles/main.css
@@ -1,52 +1,92 @@
-/* main.css */
-
-/* Общие стили для главной страницы */
 body {
-	font-family: 'Arial', sans-serif;
-	background-color: #e9ecef;
+	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: #f3f4f6;
 }
 
-header {
-	background-color: #007bff;
-	color: white;
-	padding: 20px 0;
+.container {
+	display: flex;
+	width: 90%;
+	max-width: 1200px;
+	height: 80vh;
+	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+	background-color: white;
+	border-radius: 8px;
+	overflow: hidden;
 }
 
-nav ul {
-	list-style-type: none;
-	padding: 0;
-	text-align: center;
-}
-
-nav ul li {
-	display: inline;
-	margin: 0 15px;
-}
-
-nav ul li a {
-	color: white;
-	text-decoration: none;
-	font-weight: bold;
-}
-
-nav ul li a:hover {
-	text-decoration: underline;
-}
-
-h1 {
-	text-align: center;
-	color: #333;
-	margin-top: 40px;
-}
-
-footer {
-	text-align: center;
+.sidebar {
+	width: 20%;
 	padding: 20px;
-	background-color: #007bff;
+	background-color: #2c3e50;
 	color: white;
-	position: relative;
-	bottom: 0;
+	overflow-y: auto;
+}
+
+.sidebar h2 {
+	margin: 0 0 10px;
+	font-size: 1.5em;
+}
+
+.sidebar button {
+	margin-top: 15px;
 	width: 100%;
+	padding: 10px;
+	background-color: #2980b9;
+	color: white;
+	border: none;
+	cursor: pointer;
+	border-radius: 4px;
+}
+
+.main-content {
+	width: 80%;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.header input[type='text'] {
+	width: 70%;
+	padding: 10px;
+	font-size: 1em;
+	border: 1px solid #dcdcdc;
+	border-radius: 4px;
+}
+
+.chat-section {
+	flex: 1;
+	overflow-y: auto;
+}
+
+.chat-section h2 {
+	font-size: 1.5em;
+	margin-bottom: 15px;
+}
+
+#chat-list,
+#friends-list {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+#chat-list li,
+#friends-list li {
+	padding: 10px;
+	background-color: #f9f9f9;
+	border-bottom: 1px solid #ececec;
+	cursor: pointer;
 }
