--- a/waver_project/accounts/templates/accounts/register.html
+++ b/waver_project/accounts/templates/accounts/register.html
@@ -1,5 +1,15 @@
-<!-- register.html -->
-<form method="POST" enctype="multipart/form-data">
-	{% csrf_token %} {{ form.as_p }}
-	<button type="submit">Зарегистрироваться</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Реєстрація</title>
+	</head>
+	<body>
+		<h2>Реєстрація</h2>
+		<form method="post" enctype="multipart/form-data">
+			{% csrf_token %} {{ form.as_p }}
+			<button type="submit">Зареєструватися</button>
+		</form>
+	</body>
+</html>
