--- a/waver_project/accounts/templates/accounts/register.html
+++ b/waver_project/accounts/templates/accounts/register.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Реєстрація</title>
+		{% load static %}
+		<link rel="stylesheet" href="{% static 'styles/login.css' %}" />
 	</head>
 	<body>
 		<h2>Реєстрація</h2>
